# terra-landing-zone-service

./: .gitignore  CONTRIBUTING.md  DESIGN.md  README.md  build.gradle  foundation.yaml  settings.gradle
.github/: dependabot.yml  dependabot.yml.bak
.github/actions/bump-skip/: action.yml
.github/workflows/: build-and-test.yml  consumer_contract_tests.yml  linter-tests.yml  tag-publish.yml  tag.yml  test.yml  verify_consumer_pacts.yaml  workflow-tester.yml
buildSrc/: build.gradle
buildSrc/src/main/groovy/: bio.terra.landingzone.java-common-conventions.gradle  bio.terra.landingzone.java-library-conventions.gradle  bio.terra.landingzone.java-spring-app-conventions.gradle  bio.terra.landingzone.java-spring-conventions.gradle  bio.terra.landingzone.java-spring-library-conventions.gradle
client/: artifactory.gradle  build.gradle  swagger.gradle
docs/: DELETING_RESOURCES.md
futureservice/: build.gradle
scripts/: build  init.sh  postgres-init.sql  run  run-db  setup  tester.sh  utils.sh  write-config.sh
service/: README.md  build.gradle  publishing.gradle  render-test-config.sh
service/gradle/: generators.gradle  publishing.gradle  testing.gradle
service/local-dev/: local-postgres-init.sql  run_postgres.sh  sql_validate.sh
service/src/main/resources/: application.yml
smoke_tests/: README.md  pyproject.toml  smoke_tests.py
smoke_tests/tests/: smoke_test_case.py
smoke_tests/tests/authenticated/: landingzone_definitions_tests.py  landingzone_list_tests.py
smoke_tests/tests/unauthenticated/: status_tests.py  version_tests.py
testharness/: build.gradle
(+270 files in other folders)
