[tool.poetry]
name = "landingzone-smoke-tests"
version = "0.1.0"
description = "Verify basic LZ functionality for a given environment"
authors = ["DSP Workspaces <dsp-workspaces@broadinstitute.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.0"
google-auth = "^2.19.1"

[tool.poetry.group.dev.dependencies]
black = {extras = ["d"], version = "^24.3.0"}
pdbpp = "^0.10.3"
poetry-lock-package = "^0.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"